k8s/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ums-backend
  labels:
    app: ums-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ums-backend
  template:
    metadata:
      labels:
        app: ums-backend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: backend
          image: ghcr.io/bipasapradhan/ums-backend:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 1
