k8s/chunking-service-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chunking-worker
  labels:
    app: chunking-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chunking-worker
  template:
    metadata:
      labels:
        app: chunking-worker
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: chunking-worker
          image: ghcr.io/bipasapradhan/chunking-service:latest
