k8s/convert-service-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: convert-worker
  labels:
    app: convert-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: convert-worker
  template:
    metadata:
      labels:
        app: convert-worker
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: convert-worker
          image: ghcr.io/bipasapradhan/convert-service:latest
          command: ["celery"]
          args:
            [
              "-A",
              "app.convert",
              "worker",
              "--pool=solo",
              "--loglevel=INFO",
              "-E",
              "-Q",
              "convert_queue",
            ]
