k8s/mariadb-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maria-db
  labels:
    app: maria-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maria-db
  template:
    metadata:
      labels:
        app: maria-db
    spec:
      containers:
        - name: mariadb
          image: mariadb:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mariadb-data
              mountPath: /var/lib/mysql
      volumes:
        - name: mariadb-data
          persistentVolumeClaim:
            claimName: mariadb-pvc
