k8s/thumbnail-service-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thumbnail-worker
  labels:
    app: thumbnail-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thumbnail-worker
  template:
    metadata:
      labels:
        app: thumbnail-worker
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: thumbnail-worker
          image: ghcr.io/bipasapradhan/thumbnail-service:latest
