k8s/user-authentication-service-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-authentication-service
  labels:
    app: user-authentication-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-authentication-service
  template:
    metadata:
      labels:
        app: user-authentication-service
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: backend
          image: ghcr.io/bipasapradhan/user-authentication-service:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 1
