k8s/video-processing-api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-processing-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: video-processing-service
  template:
    metadata:
      labels:
        app: video-processing-service
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: video-processing-service
          image: ghcr.io/bipasapradhan/video-processing-service:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: counter-volume
              mountPath: /app/counter
      volumes:
        - name: counter-volume
          persistentVolumeClaim:
            claimName: counter-pvc
