k8s/video-processing-worker-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-processing-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: video-processing-worker
  template:
    metadata:
      labels:
        app: video-processing-worker
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: video-processing-worker
          image: ghcr.io/bipasapradhan/video-processing-service:latest
          command: ["celery"]
          args:
            [
              "-A",
              "tasks",
              "worker",
              "--pool=solo",
              "--loglevel=INFO",
              "-E",
              "-Q",
              "video_processing_queue",
            ]
