k8s/video-service-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-service
  labels:
    app: video-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: video-service
  template:
    metadata:
      labels:
        app: video-service
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: backend-video-service
          image: ghcr.io/bipasapradhan/video-service:latest
          ports:
            - containerPort: 8081
          readinessProbe:
            tcpSocket:
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 1
