k8s/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maria-db
spec:
  selector:
    app: maria-db
  ports:
    - name: maria-db
      port: 3306
      targetPort: 3306
  type: ClusterIP
