k8s/user-authentication-service-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: user-authentication-service
spec:
  selector:
    app: user-authentication-service
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
