k8s/video-service-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: video-service 
spec:
  selector:
    app: video-service
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8081
