k8s/websocket-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: websocket-service 
spec:
  selector:
    app: websocket-service
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8082
