k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vms-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api/videos
            pathType: Prefix
            backend:
              service:
                name: video-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: user-authentication-service
                port:
                  number: 80
